CoreModules/Leaderboard/leaderboardapi-k8s/leaderboardapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: leaderboardapi
  namespace: onaimhub
  labels:
    app: leaderboardapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: leaderboardapi
  template:
    metadata:
      labels:
        app: leaderboardapi
    spec:
      containers:
        - name: leaderboardapi
          image: gvgroup/onaim-leaderboard:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          volumeMounts:
            - mountPath: /app/appsettings.json
              name: leaderboardapi-cm0
              subPath: appsettings.json
      restartPolicy: Always
      imagePullSecrets:
        - name: dockerhub-secret
      volumes:
        - configMap:
            items:
              - key: appsettings.json
                path: appsettings.json
            name: leaderboardapi-cm0
          name: leaderboardapi-cm0
