CoreModules/Leaderboard/leaderboardapi-k8s/leaderboarddb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: leaderboarddb
  namespace: onaimhub
  labels:
    app: leaderboarddb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: leaderboarddb
  template:
    metadata:
      labels:
        app: leaderboarddb
    spec:
      containers:
        - name: leaderboarddb
          image: postgres:13
          ports:
            - containerPort: 5432
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: leaderboarddb-data
      restartPolicy: Always
      volumes:
        - name: leaderboarddb-data
          persistentVolumeClaim:
            claimName: leaderboarddb-data
