CoreModules/Leaderboard/leaderboardapi-k8s/leaderboardapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: leaderboardapi
  namespace: onaimhub
spec:
  ports:
    - name: "5004"
      port: 5004
      targetPort: 8080
  selector:
    app: leaderboardapi
