CoreModules/Leaderboard/leaderboardapi-k8s/leaderboarddb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: leaderboarddb
  namespace: onaimhub
spec:
  ports:
    - name: "5436"
      port: 5436
      targetPort: 5432
  selector:
    app: leaderboarddb
