CoreModules/Leaderboard/leaderboardapi-k8s/leaderboardapi-ingerss.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: leaderboardapi-ingress
  namespace: onaimhub
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false" # Set to "true" if SSL is configured
spec:
  rules:
    - host: onaim.leaderboardapi.dev.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: leaderboardapi
                port:
                  number: 5004
